# mathbot

./: .gitignore  Cargo.toml  Dockerfile  dbinserttemp.sql  docker-compose-example.yml  slotsprices.mathbot
mathbot_macros/: Cargo.toml
mathbot_macros/src/: lib.rs
migrations/: 20240701093602_init.sql  20240702190330_init.sql  20240707193535_items.sql  20240707193550_accounts.sql  dbinserttemp.sql
src/: appearance.rs  bot.rs  command.rs  error.rs  lib.rs  logging.rs  main.rs  model.rs  parser.rs  ui.rs
src/commands/: info.rs  meta.rs  misc.rs  mod.rs  test.rs
src/commands/admin/: admin.rs  mod.rs
src/commands/admin/admin/: ban.rs  mod.rs  unban.rs
src/commands/currency/: balance.rs  gamble.rs  iteminfo.rs  mod.rs  shop.rs  slots.rs  transfer.rs
src/commands/currency/mine/: buy.rs  claim.rs  mod.rs  remove.rs  set.rs
src/commands/currency/shop/: buy.rs  mod.rs
src/commands/fun/: ask.rs  choose.rs  mod.rs  mrbean.rs  rockpaperscissors.rs  say.rs
src/commands/hidden/: explainusererror.rs  mod.rs
src/commands/info/: botinfo.rs  help.rs  mod.rs  ping.rs
src/commands/math/: answer.rs  fibonacci.rs  fractionify.rs  mod.rs  pi.rs  prime.rs  rng.rs  simplemathproblem.rs  solution.rs  solve.rs
src/commands/test/: confirmbuttons.rs  mod.rs  test.rs
src/commands/user/: account.rs  inventory.rs  mod.rs
src/commands/user/account/: create.rs  delete.rs  mod.rs  update_avatar.rs  update_bio.rs  update_pronouns.rs  update_username.rs
src/model/: account.rs  item.rs  mod.rs
src/model/account/: macros.rs  mod.rs
src/model/item/: macros.rs  mod.rs
src/tests/: mod.rs
