[package]
name = "mathbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
strum_macros = "0.26"
async-trait = "0.1"
color-eyre = "0.6"
dotenv = "0.15"
chrono = "0.4"