[package]
name = "mathbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
strum = "0.26"
strum_macros = "0.26"
color-eyre = "0.6"
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
phf = { version = "0.11", features = ["macros"] }
indexmap = "2.2"
derive_more = "0.99"
evalexpr = "11.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"]}
enum-as-inner = "0.6"
