[package]
name = "mathbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity = { version = "0.12", features = ["model", "collector", "chrono"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
strum = "0.26"
strum_macros = "0.26"
color-eyre = "0.6"
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
indexmap = "2.2"
evalexpr = "11.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
itertools = "0.13"
uuid = { version = "1.9", features = ["v4"] }
reqwest = "0.12"
lazy-regex = "3.1"
num-bigint = "0.4"
num-integer = "0.1"
num-format= "0.4"
